@@ -3,4 +3,6 @@
 
 Kodi kiegészítő a ppcrn-hez
 
+1.0.1 - inputstream adaptive hozzáadása hls-hez
+
 1.0.0 - Első verzió
